[package]
name = "move-cli"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "CLI frontend for the Move compiler and VM"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
colored.workspace = true
difference.workspace = true
serde_yaml.workspace = true
clap.workspace = true
tempfile.workspace = true
walkdir.workspace = true
codespan-reporting.workspace = true
toml_edit.workspace = true

bcs.workspace = true
move-vm-runtime.workspace = true
move-core-types.workspace = true
move-unit-test.workspace = true
move-package.workspace = true
move-compiler.workspace = true
move-command-line-common.workspace = true
move-coverage.workspace = true
move-vm-test-utils.workspace = true
move-stdlib.workspace = true

[[bin]]
name = "move"
path = "src/main.rs"
